--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -22,12 +22,13 @@ jobs:
           distribution: temurin
           java-version: '17'
           cache: gradle
+          # Point cache scanning at the Titan/ subfolder
           cache-dependency-path: |
             Titan/**/build.gradle
             Titan/**/build.gradle.kts
             Titan/**/settings.gradle
             Titan/**/settings.gradle.kts
-            Titan/**/gradle/wrapper/gradle-wrapper.properties
+            Titan/**/gradle-wrapper.properties
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
@@ -35,8 +36,9 @@ jobs:
       - name: Install SDK components
         run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
-      - name: Make gradlew executable if present
+      - name: Make gradlew executable (if present)
         working-directory: ${{ env.PROJECT_ROOT }}
+        shell: bash
         run: |
           if [ -f ./gradlew ]; then chmod +x ./gradlew; fi
 
@@ -49,10 +51,10 @@ jobs:
           if [ -f ./gradlew ]; then
             echo "GRADLE_CMD=./gradlew" >> "$GITHUB_OUTPUT"
           else
-            cd ..
+            cd ~
             curl -L -o gradle.zip https://services.gradle.org/distributions/gradle-8.7-bin.zip
-            unzip -q gradle.zip
-            echo "$HOME/gradle-8.7/bin" >> "$GITHUB_PATH"
+            unzip -q gradle.zip -d "$HOME/gradle"
+            echo "$HOME/gradle/gradle-8.7/bin" >> "$GITHUB_PATH"
             echo "GRADLE_CMD=gradle" >> "$GITHUB_OUTPUT"
           fi
 
@@ -61,7 +63,7 @@ jobs:
         run: |
           set -e
           cd "${PROJECT_ROOT}"
-          ${{ steps.gradle.outputs.GRADLE_CMD }} :${APP_MODULE}:assembleDebug --stacktrace --no-daemon
+          ${{ steps.gradle.outputs.GRADLE_CMD }} --no-daemon :${APP_MODULE}:assembleDebug --stacktrace --info
 
       - name: Debug: print project structure on failure
         if: ${{ failure() }}
@@ -81,4 +83,5 @@ jobs:
           name: titan-debug-apk
           path: |
             ${{ env.PROJECT_ROOT }}/${{ env.APP_MODULE }}/build/outputs/apk/debug/*.apk
+            ${{ env.PROJECT_ROOT }}/**/build/outputs/apk/debug/*.apk
           if-no-files-found: warn
