--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -16,7 +16,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # No Gradle cache -> avoids path matching errors
       - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
@@ -27,6 +26,7 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Install SDK components
+        shell: bash
         run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
       - name: Verify project layout
@@ -38,10 +38,9 @@ jobs:
           echo "== ${PROJECT_ROOT} =="
           ls -la "${PROJECT_ROOT}" || true
           echo "== quick tree =="
-          find "${PROJECT_ROOT}" -maxdepth 3 -type f -name "build.gradle" -o -name "build.gradle.kts" -o -name "settings.gradle" -o -name "settings.gradle.kts" -o -name "AndroidManifest.xml" -print | sed 's/^/  /'
-          # Hard fail if the expected module folder is missing
+          find "${PROJECT_ROOT}" -maxdepth 3 -type f \( -name "build.gradle" -o -name "build.gradle.kts" -o -name "settings.gradle" -o -name "settings.gradle.kts" -o -name "AndroidManifest.xml" \) -print | sed 's/^/  /'
           if [ ! -d "${PROJECT_ROOT}/${APP_MODULE}" ]; then
-            echo "::error::Expected directory '${PROJECT_ROOT}/${APP_MODULE}' not found. Check your repo layout."
+            echo "::error::Expected '${PROJECT_ROOT}/${APP_MODULE}' not found. Check repo layout."
             exit 2
           fi
 
@@ -76,3 +75,20 @@ jobs:
 
       - name: "Debug: print project structure on failure"
         if: ${{ failure() }}
+        shell: bash
+        run: |
+          echo "== Gradle files =="
+          find "${PROJECT_ROOT}" -maxdepth 2 \( -name "build.gradle" -o -name "build.gradle.kts" -o -name "settings.gradle" -o -name "settings.gradle.kts" \) -print
+          echo "== App directory listing =="
+          ls -la "${PROJECT_ROOT}/${APP_MODULE}" || true
+          echo "== APK output listing =="
+          ls -la "${PROJECT_ROOT}/${APP_MODULE}/build/outputs/apk/debug" || true
+
+      - name: Upload APK artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: titan-debug-apk
+          path: |
+            ${{ env.PROJECT_ROOT }}/${{ env.APP_MODULE }}/build/outputs/apk/debug/*.apk
+          if-no-files-found: warn
