--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -211,6 +211,14 @@ jobs:
           "$CMD" -p "${PROJECT_ROOT}" --no-daemon \
             :${APP_MODULE}:assembleDebug --stacktrace --warning-mode=all -i
 
+      - name: Summarize Gradle errors (best-effort)
+        if: failure()
+        shell: bash
+        run: |
+         echo "==== Looking for Kotlin/Java error lines ===="
+    # show last 300 lines of the job log Gradle printed (already on stdout)
+    # plus common compiler markers if present in build/ logs
+    grep -RIn --line-number --no-messages -e "^e: " -e "error:" -e "FAILED" "${PROJECT_ROOT}" || true
       - name: Show any APKs that exist (any path)
         if: always()
         shell: bash
