--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -8,28 +8,48 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      PROJECT_ROOT: Titan
+      APP_MODULE: app
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Optional unzip step
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install SDK components
+        run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
+
+      # ---------- OPTIONAL: unzip prebuilt project into Titan/ ----------
       - name: Unzip TitanApp_Rebuild.zip (if present)
         run: |
           set -euo pipefail
           if [ -f TitanApp_Rebuild.zip ]; then
-            echo "Found TitanApp_Rebuild.zip — extracting..."
-            unzip -o TitanApp_Rebuild.zip -d .
+            echo "Zip found. Unpacking into ${PROJECT_ROOT}/ ..."
+            mkdir -p "${PROJECT_ROOT}"
+            unzip -o TitanApp_Rebuild.zip -d "${PROJECT_ROOT}"
           else
             echo "No TitanApp_Rebuild.zip found — skipping."
           fi
 
-      # Guard check — verify structure OR auto-create Kotlin app
-      - name: Ensure Gradle project exists (or auto-generate Kotlin app)
+      # ---------- Guard: ensure Gradle project OR create tiny Kotlin app ----------
+      - name: Ensure Gradle project exists (or auto-generate tiny app)
         run: |
           set -euo pipefail
-          echo "== Checking for Gradle project =="
+          mkdir -p "${PROJECT_ROOT}"
+          cd "${PROJECT_ROOT}"
+
           if [ ! -f settings.gradle ] && [ ! -f settings.gradle.kts ]; then
-            echo "No Gradle settings found — creating minimal Android Kotlin app..."
+            echo "No Gradle settings found — creating minimal Android Kotlin app at ${PROJECT_ROOT}/"
+
             mkdir -p app/src/main/java/com/example/helloworld
             mkdir -p app/src/main/res/layout
             mkdir -p app/src/main/res/values
@@ -74,6 +94,11 @@ android {
         versionCode = 1
         versionName = "1.0"
     }
+    buildTypes {
+        release {
+            isMinifyEnabled = false
+        }
+    }
     buildFeatures {
         viewBinding = true
     }
@@ -103,51 +128,72 @@ class MainActivity : AppCompatActivity() {
 }
 EOF
           else
-            echo "Gradle project found."
+            echo "Gradle project detected in ${PROJECT_ROOT}/"
           fi
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Install SDK components
-        run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
-
       - name: Make gradlew executable (if present)
+        working-directory: ${{ env.PROJECT_ROOT }}
         run: |
-          if [ -f gradlew ]; then
-            chmod +x gradlew
+          if [ -f ./gradlew ]; then chmod +x ./gradlew; fi
+
+      - name: Pick Gradle (wrapper or 8.7)
+        id: gradle
+        shell: bash
+        run: |
+          set -e
+          cd "${PROJECT_ROOT}"
+          if [ -f ./gradlew ]; then
+            echo "GRADLE_CMD=./gradlew" >> "$GITHUB_OUTPUT"
           else
-            echo "gradlew not found — will rely on generated gradlew if available."
+            echo "No gradle wrapper. Installing Gradle 8.7..."
+            cd ..
+            curl -L -o gradle.zip https://services.gradle.org/distributions/gradle-8.7-bin.zip
+            unzip -q gradle.zip
+            echo "$HOME/gradle-8.7/bin" >> "$GITHUB_PATH"
+            echo "GRADLE_CMD=gradle" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Build Debug APK (capture full log)
-        run: ./gradlew assembleDebug --stacktrace
+        shell: bash
+        run: |
+          set -e
+          cd "${PROJECT_ROOT}"
+          CMD="${{ steps.gradle.outputs.GRADLE_CMD }}"
+          "$CMD" -p "${PWD}" --no-daemon :${{ env.APP_MODULE }}:assembleDebug --stacktrace
 
+      # ---------- Helpful diagnostics (don’t fail the job further) ----------
       - name: Summarize Gradle errors (best-effort)
         if: failure()
+        shell: bash
         run: |
-          echo "===== Kotlin/Java error lines ====="
-          grep -i -E "error|exception|failed" **/*.gradle* **/*.kt **/*.java || true
+          echo "==== Looking for Kotlin/Java error lines ===="
+          grep -RIn --line-number --no-messages -E "e: | error: | FAILED" "${{ env.PROJECT_ROOT }}" || true
 
       - name: Show any APKs that exist (any path)
+        if: always()
+        shell: bash
         run: |
+          set -e
           echo "Searching for APKs..."
-          find . -type f -name "*.apk" || true
+          find . -type f -name "*.apk" -print || true
 
       - name: Debug: print project structure on failure
         if: failure()
+        shell: bash
         run: |
           echo "== repo root =="
-          ls -R | head -n 200
+          ls -la
+          echo "== quick tree (depth 3) =="
+          find . -maxdepth 3 -printf "%y %p\n" | sed -n '1,400p' || true
+          echo "== Gradle files =="
+          find . -maxdepth 3 \( -name "build.gradle" -o -name "build.gradle.kts" -o -name "settings.gradle.kts" -o -name "settings.gradle" \) -print || true
 
       - name: Upload APK artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Titan-debug-apk
-          path: "**/build/outputs/apk/**/*.apk"
+          name: titan-debug-apk
+          path: |
+            ${{ env.PROJECT_ROOT }}/${{ env.APP_MODULE }}/build/outputs/apk/**/*.apk
+            **/build/outputs/apk/**/*.apk
+          if-no-files-found: warn
